Advance june 16 showStrategy